[project]
name = "cso"
version = "0.1.0"
description = "Implementación del algoritmo Cat Swarm Optimization (CSO) y comparación con otros algoritmos bio-inspirados"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "deap>=1.4.0",
    "matplotlib>=3.7.0",
    "ipykernel>=7.1.0",
]
